2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Remove def_file. It was always set to
	USER_DEFAULTS_FILE.
	* src/useradd.c: Fix cut&paste issue causing bad warning when
	the useradd.default file contains an invalid INACTIVE= value.
	* src/useradd.c: Added missing end of line for rename errors.
	* src/useradd.c: Added -D synopsis to the usage message.
	* src/useradd.c: Do not scale_age(-1), just use -1.
	* src/useradd.c: Added FIXME to be fixed later.
	* src/useradd.c: Allow -e -1 when there is no shadow file.
	* src/useradd.c: Fail, but do not print the usage message when the
	-e argument is not valid.
	* src/useradd.c: No need to check for oflg since uflg is
	already checked.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Too much const were added on 2011-08-15. pw in
	save_caller_context() is allocated and freed.
	* src/su.c: Added missing #endif indication
	* src/su.c save_caller_context(): password only needed if
	SU_ACCESS and !USE_PAM.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: date_to_str() is always called with negativ set
	to "never", remove this argument.
	* src/usermod.c: Added missing cast for gr_free argument.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwconv.c: Fail if not called correctly.
	* src/pwconv.c: At the end of main, the passwd and shadow files
	are locked. No need to check before unlocking.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Initially set the passwd's password to '*'
	instead of 'x'. Only when it is confirmed that a shadow entry is
	(will be) added, set the passwd's password to 'x'.
	* src/newusers.c: An invalid line is an error. A failure needs to
	be reported.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Remove log_gpasswd_success_gshadow(). Writing in
	gshadowis the last sub-task.
