@@ -1,5 +1,16 @@
 2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/chage.c: EPOCH is not needed, it's converted to -1 by
+	strtoday(). But we need to support "-1" specifically.
+	* src/chage.c: Fix usage: LOGIN is mandatory.
+	* src/chage.c: Display disabled expiry or last change as "-1"
+	instead of 1969-12-31. 1969-12-31 is still supported as input from
+	the user.
+	* src/chage.c: Exit cleanly with fail_exit() (lock files were not
+	removed).
+
+2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/useradd.c: Remove def_file. It was always set to
 	USER_DEFAULTS_FILE.
 	* src/useradd.c: Fix cut&paste issue causing bad warning when
